Use 'isEmpty()' instead of 'size()' to improve performance with linked lists + fixed some minor intellij warnings